src/objects/TR1__Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Expenses__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_GP__c</fullName>
        <formula>TR1__Gross_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Holiday_Hours__c</fullName>
        <label>Total Holiday Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Hours__c</fullName>
        <formula>TR1__Total_Regular_Hours__c + TR1__Total_Overtime_Hours__c + TR1__Total_Double_Time_Hours__c + TR1__Total_Vacation_Hours__c + TR1__Total_Sick_Time_Hours__c + TR1__Total_Holiday_Hours__c + TR1__Total_Travel_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Overtime_Hours__c</fullName>
        <label>Total Overtime Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Overtime_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Pay_Override__c</fullName>
        <label>Total Pay (Override)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Regular_Hours__c</fullName>
        <label>Total Regular Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Regular_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Shift_Fee__c</fullName>
        <label>Total Shift Fee</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Total_Fee__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Shift_Hours__c</fullName>
        <label>Total Shift Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Total_Shift_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Sick_Time_Hours__c</fullName>
        <label>Total Sick Time Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Sick_Time_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Travel_Hours__c</fullName>
        <label>Total Travel Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Travel_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Vacation_Hours__c</fullName>
        <label>Total Vacation Hours</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Vacation_Hours__c</summarizedField>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Travel_Bill_Rate__c</fullName>
        <label>Travel Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Travel_Pay_Rate__c</fullName>
        <formula>TR1__Closing_Report__r.TR1__Travel_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Worker_Comp_Percentage__c</fullName>
        <label>Worker Comp Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Year__c</fullName>
        <description>CASE 
(MONTH(TR1__Pay_Week_Ending__c), 
   2, YEAR(TR1__Pay_Week_Ending__c)-2001,
   3, YEAR(TR1__Pay_Week_Ending__c)-2001,
   4, 
   CASE (DAY(TR1__Pay_Week_Ending__c),
       1, YEAR(TR1__Pay_Week_Ending__c)-2001,
       2, YEAR(TR1__Pay_Week_Ending__c)-2001,
       3, YEAR(TR1__Pay_Week_Ending__c)-2001,
       4, YEAR(TR1__Pay_Week_Ending__c)-2001,
       5, YEAR(TR1__Pay_Week_Ending__c)-2001,
       YEAR(TR1__Pay_Week_Ending__c)-2000),
YEAR(TR1__Pay_Week_Ending__c)-2000)</description>
        <formula>IF(
AND(MONTH(TR1__Pay_Week_Ending__c) &lt;= 4,MONTH(TR1__Pay_Week_Ending__c) &lt;= 5),
RIGHT (TEXT (YEAR(TR1__Pay_Week_Ending__c)), 2),
RIGHT (TEXT (YEAR(TR1__Pay_Week_Ending__c)), 2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_Rating__c</fullName>
        <label>Weekly Teacher Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Very Good</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Requires Improvement</fullName>
                </value>
                <value>
                    <fullName>Unsatisfactory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_Score__c</fullName>
        <label>Teacher Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Approved_Date_Time__c</fullName>
        <label>Timesheet Approved Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timesheet_Approver__c</fullName>
        <formula>TR1__Approver__r.FirstName + &apos; &apos; +  TR1__Approver__r.LastName</formula>
        <label>Timesheet Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet_Export_DateTime__c</fullName>
        <formula>Timesheet_Export_Line_Item__r.CreatedDate</formula>
        <label>Timesheet Export DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timesheet_Export_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Export Line Item</label>
        <referenceTo>Timesheet_Export_Line_Item__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Status__c</fullName>
        <formula>IMAGE( 
CASE( 
TR1__Status__c , 
&quot;Approved&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004Ux58&quot;, 
&quot;Submitted&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004Ux5D&quot;, 
&quot;Unsubmitted&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004Ux53&quot;, 
&quot;Rejected&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004Ux5I&quot;, 
&quot;Changed by Payroll&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004Ux4t&quot;, 
&quot;/servlet/servlet.FileDownload?file=0154I000004Ux53&quot;),
&quot;Timesheet Status&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet_Week_New__c</fullName>
        <formula>MOD(FLOOR( ( TR1__Pay_Week_Ending__c -DATEVALUE(&quot;2019-03-26&quot; ))/7)-1,52)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Week New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Week__c</fullName>
        <description>IF(TR1__Week_Ending__c&gt;DATE(YEAR(TR1__Week_Ending__c),3,27), 
(TR1__Week_Ending__c-DATE(YEAR(TR1__Week_Ending__c),3,27))/7, 
37+(DATE(YEAR(TR1__</description>
        <formula>IF((CEILING(((TR1__Pay_Week_Ending__c-DATE(YEAR(TR1__Pay_Week_Ending__c),3,27)))/7))&lt;1,
53+(CEILING(((TR1__Pay_Week_Ending__c-DATE(YEAR(TR1__Pay_Week_Ending__c),3,27)))/7)),
(CEILING(((TR1__Pay_Week_Ending__c-DATE(YEAR(TR1__Pay_Week_Ending__c),3,27)))/7))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_no__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bill_Amount__c</fullName>
        <formula>ROUND(TR1__Total_Regular_Hours__c * TR1__Bill_Rate__c,2) + ROUND((TR1__Total_Overtime_Hours__c * ROUND(TR1__OT_Bill_Rate__c,2)),2) + ROUND(( TR1__Total_Double_Time_Hours__c * ROUND(TR1__DT_Bill_Rate__c,2)),2) + ROUND(TR1__Bonus__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days_Charge_Amount__c</fullName>
        <formula>Total_Days__c  *  TR1__Closing_Report__r.Maximum_Day_Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days_Pay_Amount__c</fullName>
        <formula>Total_Days__c  *  TR1__Closing_Report__r.Maximum_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <label>Total Days</label>
        <summaryFilterItems>
            <field>TR1__Timesheet_Detail__c.DayShift__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Half_Days_Charge_Amount__c</fullName>
        <formula>Total_Half_Days__c  *  TR1__Closing_Report__r.Maximum_Half_Day_Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Half Days Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Half_Days_Pay_Amount__c</fullName>
        <formula>Total_Half_Days__c  *  TR1__Closing_Report__r.Maximum_Half_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Half Days Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Half_Days__c</fullName>
        <label>Total Half Days</label>
        <summaryFilterItems>
            <field>TR1__Timesheet_Detail__c.Half_Day__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Charge_Amount__c</fullName>
        <formula>TR1__Total_Regular_Hours__c *  TR1__Closing_Report__r.Maximum_Hour_Charge_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Pay_Amount__c</fullName>
        <formula>TR1__Total_Regular_Hours__c  *  TR1__Closing_Report__r.Maximum_Hour_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>( Margin_Umbrella__c +  Margin_PAYE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Reported_Charge__c</fullName>
        <formula>Total_Days_Charge_Amount__c +  Total_Half_Days_Charge_Amount__c +  Total_Hours_Charge_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reported Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Reported_Days__c</fullName>
        <formula>Total_Days__c + ( Total_Half_Days__c /2) + ( TR1__Total_Regular_Hours__c /6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reported Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reported_Pay__c</fullName>
        <formula>Total_Days_Pay_Amount__c +  Total_Half_Days_Pay_Amount__c +  Total_Hours_Pay_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reported Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_1__c</fullName>
        <formula>Total_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_2__c</fullName>
        <formula>Total_Half_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_3__c</fullName>
        <formula>TR1__Total_Regular_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit 3</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateFromExport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateFromExport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_Ending_Day_Hidden__c</fullName>
        <formula>CASE( MOD( TR1__Week_Ending__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Ending Day (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>(( TR1__Pay_Week_Ending__c  - DATE(YEAR(TR1__Pay_Week_Ending__c), 1, 1) + (CASE( MOD( DATE( YEAR( TR1__Pay_Week_Ending__c ), 01, 01 ) - DATE(1900, 1, 7), 7),
0, - 0, 
6, - 1, 
2, + 2, 
4, + 4, 
5, + 5, 
1, + 1, 
+ 3))) / 7) + IF(MOD((TR1__Pay_Week_Ending__c - DATE(YEAR(TR1__Pay_Week_Ending__c), 1, 1) + (CASE( MOD( DATE( YEAR( TR1__Pay_Week_Ending__c ), 01, 01 ) - DATE(1900, 1, 7), 7),
0, - 0, 
6, - 1, 
2, + 2, 
4, + 4, 
5, + 5, 
1, + 1, 
+ 3))), 7) = 0, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR( TR1__Pay_Week_Ending__c))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approve_test__c</fullName>
        <formula>IF(TR1__Consultant__c  = TR1__Approver__c, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>approve test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shift_start_date__c</fullName>
        <description>first shift worked in the week - used for the Merit Timesheet Export report</description>
        <label>Shift Start Date</label>
        <summarizedField>TR1__Timesheet_Detail__c.TR1__Date__c</summarizedField>
        <summaryFilterItems>
            <field>TR1__Timesheet_Detail__c.Units_Populated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>TR1__Timesheet_Detail__c.TR1__Timesheet__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All_Timesheets_This_Week1</fullName>
        <columns>Branch__c</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>NAME</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>Timesheet_Status__c</columns>
        <columns>TR1__Timesheet_Approver_Email__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All Timesheets This Week</label>
        <language>en_US</language>
        <sharedTo>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Timesheets_This_Week2</fullName>
        <columns>NAME</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>Timesheet_Status__c</columns>
        <columns>Branch__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>TR1__Timesheet_Approver_Email__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All Timesheets This Week</label>
        <sharedTo>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unapproved_Timesheets_Brighton_Pri</fullName>
        <columns>NAME</columns>
        <columns>Timesheet_Week__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TR1__Week_Ending__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>Payroll_number__c</columns>
        <columns>TR1__Client__c</columns>
        <columns>Client_account_number__c</columns>
        <columns>TR1__Job_Owner__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>TR1__Week_Ending__c</field>
            <operation>equals</operation>
            <value>10/25/2020</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Secondary</value>
        </filters>
        <label>All Unapproved Timesheets Brighton Pri</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BP_AB_Timesheets_Summer_Term</fullName>
        <columns>Timesheet_Status__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Approver__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Pay_Override__c</columns>
        <columns>Timesheet_Week__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>Timesheet_no__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/22/2019</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TR1__Job_Owner__c</field>
            <operation>contains</operation>
            <value>AARON BLACKWELL</value>
        </filters>
        <label>BP AB Timesheets (Summer Term)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Brighton_Primary_Branch</group>
            <group>Brighton_Secondary_Branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BS_Last_Week</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Timesheet_Status__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Approver__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <columns>Branch__c</columns>
        <columns>Timesheet_Week__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>NAME</columns>
        <columns>TR1__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Secondary</value>
        </filters>
        <label>BS Last Week</label>
        <sharedTo>
            <group>Brighton_Primary_Branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BS_This_Week</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Timesheet_Status__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Approver__c</columns>
        <columns>TR1__Job_Credit__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>Timesheet_Week__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>TR1__Status__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Secondary</value>
        </filters>
        <label>BS This Week</label>
        <sharedTo>
            <group>Brighton_Primary_Branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bri_Pri_Timesheets_last_week</fullName>
        <columns>NAME</columns>
        <columns>Timesheet_Status__c</columns>
        <columns>TR1__Job_Owner__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Pay_Override__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Primary</value>
        </filters>
        <label>Timesheets LAST week - Bri Pri</label>
        <language>en_US</language>
        <sharedTo>
            <group>Brighton_Primary_Branch</group>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bri_Pri_Timesheets_this_week</fullName>
        <columns>Timesheet_Status__c</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>TR1__Job_Owner__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>NAME</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>TR1__Timesheet_Approver_Email__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Pay_Override__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Primary</value>
        </filters>
        <label>Timesheets THIS week - Bri Pri</label>
        <language>en_US</language>
        <sharedTo>
            <group>Brighton_Primary_Branch</group>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bri_Sec_Timesheets_lst_week</fullName>
        <columns>NAME</columns>
        <columns>Timesheet_Status__c</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>TR1__Job_Owner__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Pay_Override__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Secondary</value>
        </filters>
        <label>Timesheets LAST week - Bri Sec</label>
        <language>en_US</language>
        <sharedTo>
            <group>Brighton_Secondary_Branch</group>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bri_Sec_Timesheets_this_week</fullName>
        <columns>Timesheet_Status__c</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>TR1__Job_Owner__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>NAME</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>TR1__Timesheet_Approver_Email__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Pay_Override__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Brighton Secondary</value>
        </filters>
        <label>Timesheets THIS week - Bri Sec</label>
        <language>en_US</language>
        <sharedTo>
            <group>Brighton_Secondary_Branch</group>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bucks_Timesheets_last_week</fullName>
        <columns>Timesheet_Status__c</columns>
        <columns>TR1__Job_Owner__c</columns>
        <columns>TR1__Client_Name__c</columns>
        <columns>TR1__Timesheet_Approver_Email__c</columns>
        <columns>TR1__Consultant__c</columns>
        <columns>TR1__Pay_Week_Ending__c</columns>
        <columns>NAME</columns>
        <columns>TR1__Closing_Report__c</columns>
        <columns>TR1__Job_Order__c</columns>
        <columns>Timesheet_Week_New__c</columns>
        <columns>Total_Days__c</columns>
        <columns>Total_Half_Days__c</columns>
        <columns>TR1__Total_Regular_Hours__c</columns>
        <columns>TR1__Total_Pay_Override__c</columns>
        <columns>TR1__Total_Bill_Override__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TR1__Pay_Week_Ending__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>Total_Reported_Days__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Buckinghamshire</value>
        </filters>
        <label>Timesheets LAST week - Bucks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Brighton_Secondary_Branch</group>
            <group>Payroll</group>
        </sharedTo>
    </listViews>
</CustomObject>